--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,2 +1,238 @@
+body{
+    max-width: 1360px;
+    width: 100%;
+    height: 3840px;
+}
+.section1{
+    display: flex;
+    flex-direction: row;
+    margin-left: 125px;
+}
+.section1 .right-section{
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0;
+}
+.section1 .small-rec{
+    margin-left: 200px;
+}
+.section1 .p1{
+    color: #4A4FF2;
+    font-family: 'Mulish', sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.423px;
+    width: 173px;
+    margin-bottom: 32px;  
+}
+.section1 .p2{
+    width: 635px;
+    height: 191px;
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px; /* 150% */
+}
+.section1 .p3{
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+    opacity: 0.6;
+    margin-left: 190px;
+    margin-top: 9px;
+}
+/*section1 ends....*/
+.section2{
+    margin-top: 121px;
+    margin-left: 125px;
+    margin-right: 125px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(32, 1fr);
+    margin-bottom: 99px;
+}
+.rectangle1{
+    grid-row: 1/8 ;
+    grid-column:1/4 ;
+}
+.rectangle2{
+    grid-row:1/7 ;
+    grid-column: 4/7;
+ }
+ .rectangle3{
+    grid-row:1/11 ;
+    grid-column: 7/10 ;
+}
+.rectangle4{
+    grid-row: 8 / 16 ;
+    grid-column:1 / 4 ;
+}
+.rectangle5{
+    grid-row: 7/14 ;
+    grid-column:4/7; 
+}
+.rectangle6{
+    grid-row:11/18 ;
+    grid-column:7/10 ;
+}
+.rectangle7{
+    grid-row:16/24 ;
+    grid-column:1/4 ;
+}
+.rectangle8{
+    grid-row:14/23 ;
+    grid-column:4/7 ;
+}
+.rectangle9{
+    grid-row:18/27 ;
+    grid-column:7/10 ;
+}
+.rectangle10{
+    grid-row:24/33 ;
+    grid-column:1/4 ;
+}
+.rectangle11{
+    grid-row:23/33 ;
+    grid-column:4/7 ;
+}
+.rectangle12{
+    grid-row:27/33 ;
+    grid-column:7/10 ;
+}
+/*section2 ends....*/
+.section3{
+    max-width: 1079px;
+    width: 100%;
+    height: 106px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin-left: 126px;
+    margin-bottom: 101px;
+}
+.section3 .heading{
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px; /* 135.714% */
+    width: 635px;
+    height: 106px;
+    flex-shrink: 0;
+}
+.section3 .ul1, .ul2{
+    opacity: 0.6;
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    list-style: none;
+    margin-bottom: 0px; 
+}
+.section3 .ul1{
+    margin-left: 70px;
+}
+.section3 .ul2{
+    margin-right: 0;
+}
+.section3 ul{
+    list-style: none;
+}
+.section3 li{
+    margin-bottom: 10px;
+}
+/*section3 ends...*/
+.section4{
+    max-width: 1110px;
+    width: 100%;
+    height: 823px;
+    margin-bottom: 114px;
+}
+.section4 .first-part, .second-part{
+    margin-left: 125px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 101px; 
+}
+.section4 img{
+    text-align: center;
+    margin-bottom: 48px;
+}
+.sub-container1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 51px;
+}
+.sub-container2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 280px;
+}
+.section4 .p1{
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.section4 .p2{
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.section4 .p3{
+    color: #111;
+    text-align: right;
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.section4 ul{
+    list-style: none;
+}
+.section4 .first-item{
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.section4 .second-item{
+    width: 190px;
+    color: #111;
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    opacity: 0.6;
+}
+.second-part .sub-container2{
+    margin-left: 324px;
+    margin-bottom: 32px;
+}
+/*section4 ends...*/
+
 @import 'header'
 
