--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -26,6 +26,10 @@ header{
     text-decoration: none;
     color: #111;
 }
+.right-section .contact{
+    text-decoration: none;
+    color: #111;
+}
 .left-section .svg{
     display: flex;
     justify-content: space-around;
