--- a/styles/_projects.css
+++ b/styles/_projects.css
@@ -2,16 +2,20 @@
   font-family: "Mulish", sans-serif;
 }
 
+body {
+  max-width: 1360px;
+  width: 100%;
+  height: 2068px;
+}
+
 .section1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .section1 .p1 {
@@ -23,16 +27,129 @@
   line-height: 55px; /* 137.5% */
 }
 
-.section1 .p2 .p3 {
+.left-section .p1, .p2, .p3 {
+  margin-right: 0px;
+  margin-left: 125px;
+}
+
+.left-section .p2, .p3 {
   max-width: 635px;
   width: 100%;
-  height: 222px;
   color: #111;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 26px; /* 162.5% */
   opacity: 0.8;
+}
+
+.section1 .right-section {
+  margin-right: 125px;
+  margin-left: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 120px;
+  max-width: 335px;
+  width: 100%;
+}
+
+.right-section .first-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section1 .rec-line {
+  margin-top: 0px;
+  border: 1px solid #979797;
+  opacity: 0.3;
+  background: #D8D8D8;
+  width: 335px;
+  height: 1px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+.right-section .p1 {
+  color: #111;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  opacity: 0.5;
+}
+
+.right-section .p2 {
+  text-align: left;
+  color: #111;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.section2 .main-img {
+  width: 1110px;
+  height: 660px;
+  margin-left: 125px;
+  margin-right: 125px;
+  margin-top: 61px;
+  margin-bottom: 45px;
+}
+
+.section2 p {
+  width: 1109px;
+  height: 93px;
+  color: #111;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  opacity: 0.8;
+  margin-left: 125px;
+  margin-bottom: 45px;
+}
+
+.section2 .gallary {
+  margin-left: 125px;
+  margin-right: 125px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 30px;
+  margin-bottom: 132px;
+}
+
+.section2 .gallary > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.section2 .gallary > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+.section2 .gallary > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
 }
 
 header {
