--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,12 +9,22 @@ body{
     margin-left: 125px;
 }
 .section1 .right-section{
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0;
+    display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
+  
+}
+.section1 .sub-right-part{
+    display: flex;
+    flex-direction: column;
+    margin-top:224px;
+   
 }
 .section1 .small-rec{
-    margin-left: 200px;
+    margin-left: 194px;
+    width: 30px;
+    height: 2px;
+    
 }
 .section1 .p1{
     color: #4A4FF2;
