--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,18 +1,20 @@
 
+
 header{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    width: 1109px;
+    justify-content: space-between;
+    max-width: 1109px;
+    width: 100%;
     height: 23px;
-    flex-shrink: 0;
     margin-left: 126px;
     margin-right: 125px;
     margin-top: 61px;
     margin-bottom: 96px;
 }
 .right-section{
-    margin-left: 856px;
+    
     color: #111;
     font-family: 'Mulish', sans-serif;
     font-size: 18px;
@@ -30,10 +32,17 @@ header{
     text-decoration: none;
     color: #111;
 }
-.left-section .svg{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.left-section .projects:hover{
+    border-bottom: solid 1px;
+    color: #111;
+}
+.left-section .contact:hover{
+    border-bottom: solid 1px;
+    color: #111;
+}
+.logo-svg{
+    width: 90.132px;
+    height: 19.344px;
 }
 /*header part ends...*/
 @import 'footer'
