--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ body {
   max-width: 1360px;
   width: 100%;
   height: 3840px;
+  margin: auto;
 }
 
 .section1 {
@@ -76,61 +77,97 @@ body {
 }
 
 .rectangle1 {
+  max-width: 357px;
+  height: 413px;
+  width: 100%;
   grid-row: 1/8;
   grid-column: 1/4;
 }
 
 .rectangle2 {
+  max-width: 356px;
+  height: 351px;
+  width: 100%;
   grid-row: 1/7;
   grid-column: 4/7;
 }
 
 .rectangle3 {
+  max-width: 350px;
+  height: 599px;
+  width: 100%;
   grid-row: 1/11;
   grid-column: 7/10;
 }
 
 .rectangle4 {
+  max-width: 357px;
+  height: 475px;
+  width: 100%;
   grid-row: 8/16;
   grid-column: 1/4;
 }
 
 .rectangle5 {
+  max-width: 350px;
+  height: 413px;
+  width: 100%;
   grid-row: 7/14;
   grid-column: 4/7;
 }
 
 .rectangle6 {
+  max-width: 357px;
+  height: 413px;
+  width: 100%;
   grid-row: 11/18;
   grid-column: 7/10;
 }
 
 .rectangle7 {
+  max-width: 357px;
+  height: 475px;
+  width: 100%;
   grid-row: 16/24;
   grid-column: 1/4;
 }
 
 .rectangle8 {
+  max-width: 356px;
+  height: 537px;
+  width: 100%;
   grid-row: 14/23;
   grid-column: 4/7;
 }
 
 .rectangle9 {
+  max-width: 357px;
+  height: 537px;
+  width: 100%;
   grid-row: 18/27;
   grid-column: 7/10;
 }
 
 .rectangle10 {
+  max-width: 357px;
+  height: 537px;
+  width: 100%;
   grid-row: 24/33;
   grid-column: 1/4;
 }
 
 .rectangle11 {
+  max-width: 356px;
+  height: 599px;
+  width: 100%;
   grid-row: 23/33;
   grid-column: 4/7;
 }
 
 .rectangle12 {
+  max-width: 350px;
+  height: 351px;
+  width: 100%;
   grid-row: 27/33;
   grid-column: 7/10;
 }
@@ -282,11 +319,12 @@ body {
 /*section4 ends...*/
 header {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-  width: 1109px;
+  justify-content: space-between;
+  max-width: 1109px;
+  width: 100%;
   height: 23px;
-  flex-shrink: 0;
   margin-left: 126px;
   margin-right: 125px;
   margin-top: 61px;
@@ -294,7 +332,6 @@ header {
 }
 
 .right-section {
-  margin-left: 856px;
   color: #111;
   font-family: "Mulish", sans-serif;
   font-size: 18px;
@@ -315,10 +352,19 @@ header {
   color: #111;
 }
 
-.left-section .svg {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.left-section .projects:hover {
+  border-bottom: solid 1px;
+  color: #111;
+}
+
+.left-section .contact:hover {
+  border-bottom: solid 1px;
+  color: #111;
+}
+
+.logo-svg {
+  width: 90.132px;
+  height: 19.344px;
 }
 
 /*header part ends...*/
@@ -331,14 +377,12 @@ footer {
   justify-content: space-between;
   margin-left: 125px;
   margin-right: 125px;
-  padding: 2px;
 }
 
-.left {
-  margin-right: 667px;
-}
-
-.right {
+footer .right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #111;
   font-family: "Mulish", sans-serif;
   font-size: 18px;
@@ -349,9 +393,14 @@ footer {
 }
 
 .projects {
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
-.svg-img {
-  margin-left: 80px;
+.contact {
+  margin-right: 20px;
+}
+
+.right svg {
+  width: 95px;
+  height: 15px;
 }
