--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@ body{
     max-width: 1360px;
     width: 100%;
     height: 3840px;
+    margin: auto;
 }
 .section1{
     display: flex;
@@ -70,50 +71,86 @@ body{
     margin-bottom: 99px;
 }
 .rectangle1{
+    max-width: 357px;
+    height: 413px;
+    width: 100%;
     grid-row: 1/8 ;
     grid-column:1/4 ;
 }
 .rectangle2{
+    max-width: 356px;
+    height: 351px;
+    width: 100%;
     grid-row:1/7 ;
     grid-column: 4/7;
  }
  .rectangle3{
+    max-width: 350px;
+    height: 599px;
+    width: 100%;
     grid-row:1/11 ;
     grid-column: 7/10 ;
 }
 .rectangle4{
+    max-width: 357px;
+    height: 475px;
+    width: 100%;
     grid-row: 8 / 16 ;
     grid-column:1 / 4 ;
 }
 .rectangle5{
+    max-width: 350px;
+    height: 413px;
+    width: 100%;
     grid-row: 7/14 ;
     grid-column:4/7; 
 }
 .rectangle6{
+    max-width: 357px;
+    height: 413px;
+    width: 100%;
     grid-row:11/18 ;
     grid-column:7/10 ;
 }
 .rectangle7{
+    max-width: 357px;
+    height: 475px;
+    width: 100%;
     grid-row:16/24 ;
     grid-column:1/4 ;
 }
 .rectangle8{
+    max-width: 356px;
+    height: 537px;
+    width: 100%;
     grid-row:14/23 ;
     grid-column:4/7 ;
 }
 .rectangle9{
+    max-width: 357px;
+    height: 537px;
+    width: 100%;
     grid-row:18/27 ;
     grid-column:7/10 ;
 }
 .rectangle10{
+    max-width: 357px;
+    height: 537px;
+    width: 100%;
     grid-row:24/33 ;
     grid-column:1/4 ;
 }
 .rectangle11{
+    max-width: 356px;
+    height: 599px;
+    width: 100%;
     grid-row:23/33 ;
     grid-column:4/7 ;
 }
 .rectangle12{
+    max-width: 350px;
+    height: 351px;
+    width: 100%;
     grid-row:27/33 ;
     grid-column:7/10 ;
 }
