--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -1,3 +1,4 @@
+
 *{
     font-family: 'Mulish', sans-serif; 
 }
@@ -107,6 +108,5 @@ body{
     grid-template-rows: 1fr;
     grid-gap: 30px;
     margin-bottom: 132px;
-    
+}
 @import 'header'
-
