--- a/styles/contact.css
+++ b/styles/contact.css
@@ -9,8 +9,13 @@ body {
 }
 
 .section1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .left-part {
@@ -55,6 +60,10 @@ body {
   margin-bottom: 46px;
 }
 
+.right-part .input-field:hover {
+  background-color: #D8D8D8;
+}
+
 .right-part .label {
   color: #111;
   font-size: 16px;
@@ -77,6 +86,10 @@ body {
   border: none;
 }
 
+.right-part button:hover {
+  background: #6a6ff0;
+}
+
 .section2 {
   width: 1110px;
   height: 570px;
@@ -87,12 +100,22 @@ body {
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 1109px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1109px;
+  width: 100%;
   height: 23px;
-  flex-shrink: 0;
   margin-left: 126px;
   margin-right: 125px;
   margin-top: 61px;
@@ -100,7 +123,6 @@ header {
 }
 
 .right-section {
-  margin-left: 856px;
   color: #111;
   font-family: "Mulish", sans-serif;
   font-size: 18px;
@@ -116,10 +138,24 @@ header {
   color: #111;
 }
 
-.left-section .svg {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.right-section .contact {
+  text-decoration: none;
+  color: #111;
+}
+
+.left-section .projects:hover {
+  border-bottom: solid 1px;
+  color: #111;
+}
+
+.left-section .contact:hover {
+  border-bottom: solid 1px;
+  color: #111;
+}
+
+.logo-svg {
+  width: 90.132px;
+  height: 19.344px;
 }
 
 /*header part ends...*/
@@ -127,19 +163,29 @@ footer {
   max-width: 1110px;
   width: 100%;
   height: 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-left: 125px;
   margin-right: 125px;
-  padding: 2px;
 }
 
-.left {
-  margin-right: 667px;
-}
-
-.right {
+footer .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #111;
   font-family: "Mulish", sans-serif;
   font-size: 18px;
@@ -150,10 +196,14 @@ footer {
 }
 
 .projects {
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
-.svg-img {
-  margin-left: 80px;
+.contact {
+  margin-right: 20px;
 }
 
+.right svg {
+  width: 95px;
+  height: 15px;
+}
