--- a/styles/main.css
+++ b/styles/main.css
@@ -352,12 +352,12 @@ header {
   color: #111;
 }
 
-.left-section .projects:hover {
+.left-section .projects a:hover {
   border-bottom: solid 1px;
   color: #111;
 }
 
-.left-section .contact:hover {
+a:hover {
   border-bottom: solid 1px;
   color: #111;
 }
