--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -32,11 +32,11 @@ header{
     text-decoration: none;
     color: #111;
 }
-.left-section .projects:hover{
+.left-section .projects a:hover{
     border-bottom: solid 1px;
     color: #111;
 }
-.left-section .contact:hover{
+a:hover{
     border-bottom: solid 1px;
     color: #111;
 }
