--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -5,8 +5,11 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 125px;
-    margin-right: 125px;
+    margin-left: 50px;
+    padding-left: 70px;
+    padding-right: 30px;
+    margin-right: 50px;
+   
 }
 footer .right{
     display: flex;
