--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -8,10 +8,10 @@ header{
     max-width: 1109px;
     width: 100%;
     height: 23px;
-    margin-left: 126px;
-    margin-right: 125px;
+    margin-left: 50px;
     margin-top: 61px;
     margin-bottom: 96px;
+    padding-left: 70px;
 }
 .right-section{
     
