--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,8 @@ body {
 .section1 {
   display: flex;
   flex-direction: row;
-  margin-left: 125px;
+  justify-content: space-around;
+  margin-left: 20px;
 }
 
 .section1 .right-section {
@@ -20,11 +21,14 @@ body {
 .section1 .sub-right-part {
   display: flex;
   flex-direction: column;
-  margin-top: 224px;
+  align-items: center;
+  justify-content: center;
+  margin-right: 50px;
 }
 
 .section1 .small-rec {
-  margin-left: 194px;
+  display: flex;
+  flex-direction: column;
   width: 30px;
   height: 2px;
 }
@@ -37,12 +41,14 @@ body {
   font-weight: 700;
   line-height: normal;
   letter-spacing: -0.423px;
-  width: 173px;
+  max-width: 173px;
+  width: 100%;
   margin-bottom: 32px;
 }
 
 .section1 .p2 {
-  width: 635px;
+  max-width: 635px;
+  width: 100%;
   height: 191px;
   color: #111;
   font-family: "Mulish", sans-serif;
@@ -60,15 +66,19 @@ body {
   font-weight: 400;
   line-height: normal;
   opacity: 0.6;
-  margin-left: 190px;
   margin-top: 9px;
 }
 
 /*section1 ends....*/
 .section2 {
-  margin-top: 121px;
-  margin-left: 125px;
-  margin-right: 125px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.container {
+  max-width: 1110px;
+  width: 100%;
+  height: 1978px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(9, 1fr);
@@ -174,6 +184,11 @@ body {
 
 /*section2 ends....*/
 .section3 {
+  display: flex;
+  justify-content: space-around;
+}
+
+.container2 {
   max-width: 1079px;
   width: 100%;
   height: 106px;
@@ -181,23 +196,22 @@ body {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  margin-left: 126px;
-  margin-bottom: 101px;
 }
 
-.section3 .heading {
+.container2 .heading {
   color: #111;
   font-family: "Mulish", sans-serif;
   font-size: 28px;
   font-style: normal;
   font-weight: 700;
   line-height: 38px; /* 135.714% */
-  width: 635px;
+  max-width: 635px;
+  width: 100%;
   height: 106px;
-  flex-shrink: 0;
+  margin-right: 30px;
 }
 
-.section3 .ul1, .ul2 {
+.container2 .ul1, .ul2 {
   opacity: 0.6;
   color: #111;
   font-family: "Mulish", sans-serif;
@@ -209,53 +223,48 @@ body {
   margin-bottom: 0px;
 }
 
-.section3 .ul1 {
-  margin-left: 70px;
-}
-
-.section3 .ul2 {
-  margin-right: 0;
-}
-
-.section3 ul {
+.container2 ul {
   list-style: none;
 }
 
-.section3 li {
+.container2 li {
   margin-bottom: 10px;
 }
 
 /*section3 ends...*/
 .section4 {
+  display: flex;
+  justify-content: space-around;
+}
+
+.container3 {
   max-width: 1110px;
   width: 100%;
   height: 823px;
-  margin-bottom: 114px;
+  margin-bottom: 100px;
 }
 
 .section4 .first-part, .second-part {
-  margin-left: 125px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 101px;
+  margin-top: 100px;
 }
 
-.section4 img {
-  text-align: center;
-  margin-bottom: 48px;
+.section4 .divider-img {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
 
 .sub-container1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 51px;
 }
 
 .sub-container2 {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-left: 280px;
 }
 
@@ -301,7 +310,8 @@ body {
 }
 
 .section4 .second-item {
-  width: 190px;
+  max-width: 190px;
+  width: 100%;
   color: #111;
   font-family: "Mulish", sans-serif;
   font-size: 16px;
@@ -312,7 +322,7 @@ body {
 }
 
 .second-part .sub-container2 {
-  margin-left: 324px;
+  padding-left: 50px;
   margin-bottom: 32px;
 }
 
@@ -325,10 +335,10 @@ header {
   max-width: 1109px;
   width: 100%;
   height: 23px;
-  margin-left: 126px;
-  margin-right: 125px;
+  margin-left: 50px;
   margin-top: 61px;
   margin-bottom: 96px;
+  padding-left: 70px;
 }
 
 .right-section {
@@ -375,8 +385,10 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 125px;
-  margin-right: 125px;
+  margin-left: 50px;
+  padding-left: 70px;
+  padding-right: 30px;
+  margin-right: 50px;
 }
 
 footer .right {
