--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,11 +3,13 @@ body{
     width: 100%;
     height: 3840px;
     margin: auto;
+    
 }
 .section1{
     display: flex;
     flex-direction: row;
-    margin-left: 125px;
+    justify-content: space-around;
+    margin-left: 20px;
 }
 .section1 .right-section{
     display: flex;
@@ -18,14 +20,15 @@ body{
 .section1 .sub-right-part{
     display: flex;
     flex-direction: column;
-    margin-top:224px;
-   
+   align-items: center;
+   justify-content: center;
+    margin-right: 50px; 
 }
 .section1 .small-rec{
-    margin-left: 194px;
+    display: flex;
+    flex-direction: column;
     width: 30px;
     height: 2px;
-    
 }
 .section1 .p1{
     color: #4A4FF2;
@@ -35,11 +38,13 @@ body{
     font-weight: 700;
     line-height: normal;
     letter-spacing: -0.423px;
-    width: 173px;
+    max-width: 173px;
+    width: 100%;
     margin-bottom: 32px;  
 }
 .section1 .p2{
-    width: 635px;
+    max-width: 635px;
+    width: 100%;
     height: 191px;
     color: #111;
     font-family: 'Mulish', sans-serif;
@@ -56,19 +61,23 @@ body{
     font-weight: 400;
     line-height: normal;
     opacity: 0.6;
-    margin-left: 190px;
     margin-top: 9px;
 }
 /*section1 ends....*/
 .section2{
-    margin-top: 121px;
-    margin-left: 125px;
-    margin-right: 125px;
+    display: flex;
+    justify-content: space-around;
+}
+.container{
+    max-width: 1110px;
+    width: 100%;
+    height: 1978px;
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(9, 1fr);
     grid-template-rows: repeat(32, 1fr);
     margin-bottom: 99px;
+
 }
 .rectangle1{
     max-width: 357px;
@@ -156,6 +165,11 @@ body{
 }
 /*section2 ends....*/
 .section3{
+    display: flex;
+    justify-content: space-around;
+
+}
+.container2{
     max-width: 1079px;
     width: 100%;
     height: 106px;
@@ -163,21 +177,21 @@ body{
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    margin-left: 126px;
-    margin-bottom: 101px;
+   
 }
-.section3 .heading{
+.container2 .heading{
     color: #111;
     font-family: 'Mulish', sans-serif;
     font-size: 28px;
     font-style: normal;
     font-weight: 700;
     line-height: 38px; /* 135.714% */
-    width: 635px;
+    max-width: 635px;
+    width: 100%;
     height: 106px;
-    flex-shrink: 0;
+    margin-right: 30px;
 }
-.section3 .ul1, .ul2{
+.container2 .ul1, .ul2{
     opacity: 0.6;
     color: #111;
     font-family: 'Mulish', sans-serif;
@@ -188,46 +202,45 @@ body{
     list-style: none;
     margin-bottom: 0px; 
 }
-.section3 .ul1{
-    margin-left: 70px;
-}
-.section3 .ul2{
-    margin-right: 0;
-}
-.section3 ul{
+.container2 ul{
     list-style: none;
 }
-.section3 li{
+.container2 li{
     margin-bottom: 10px;
 }
 /*section3 ends...*/
 .section4{
+    display: flex;
+    justify-content: space-around;
+}
+.container3{
     max-width: 1110px;
     width: 100%;
     height: 823px;
-    margin-bottom: 114px;
+    margin-bottom: 100px;
 }
 .section4 .first-part, .second-part{
-    margin-left: 125px;
-    display: flex;
-    flex-direction: column;
-    margin-top: 101px; 
+   
+    margin-top: 100px; 
 }
-.section4 img{
-    text-align: center;
-    margin-bottom: 48px;
+
+.section4 .divider-img{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+  
 }
 .sub-container1{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 51px;
 }
 .sub-container2{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin-left: 280px;
+    justify-content: space-around;
+   margin-left: 280px;
 }
 .section4 .p1{
     color: #111;
@@ -266,7 +279,8 @@ body{
     line-height: normal;
 }
 .section4 .second-item{
-    width: 190px;
+    max-width: 190px;
+    width: 100%;
     color: #111;
     font-family: 'Mulish', sans-serif;
     font-size: 16px;
@@ -276,7 +290,7 @@ body{
     opacity: 0.6;
 }
 .second-part .sub-container2{
-    margin-left: 324px;
+    padding-left: 50px;
     margin-bottom: 32px;
 }
 /*section4 ends...*/
