--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,17 +1,16 @@
 footer{
+    display: flex;
+    justify-content: space-around;
+}
+.footer-container{
     max-width: 1110px;
     width: 100%;
     height: 23px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 50px;
-    padding-left: 70px;
-    padding-right: 30px;
-    margin-right: 50px;
-   
 }
-footer .right{
+.footer-container .right{
     display: flex;
     justify-content: space-between;
     align-items: center;
