--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,6 +1,11 @@
-
-
 header{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.header-container{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -8,10 +13,6 @@ header{
     max-width: 1109px;
     width: 100%;
     height: 23px;
-    margin-left: 50px;
-    margin-top: 61px;
-    margin-bottom: 96px;
-    padding-left: 70px;
 }
 .right-section{
     
