--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -10,10 +10,9 @@ body{
 .section1{
     display: flex;
     flex-direction: row;
-  
+  justify-content: space-around;
 }
 .left-part{
-    margin-left: 125px;
     margin-top: 0px;
     margin-bottom: 20px;
 }
@@ -23,7 +22,8 @@ body{
     font-style: normal;
     font-weight: 700;
     line-height: 55px; /* 137.5% */
-    width: 475px;
+    max-width: 475px;
+    width: 100%;
     height: 174px;
 
 }
@@ -33,20 +33,25 @@ body{
     font-style: normal;
     font-weight: 400;
     line-height: 26px; /* 162.5% */
-    width: 445px;
+    max-width: 445px;
+    width: 100%;
     height: 56px;
     opacity: 0.8;
 }
 .right-part{
     margin-top: 50px;
-    margin-left: 160px;
-    margin-right: 125px;
-   
+    
+}
+.right-part-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .right-part .input-field{
     border: none;
     border-bottom: solid 1px #979797;
-    width: 475px;  
+    max-width: 475px;  
+    width: 100%;
     opacity: 0.3;
     background: #D8D8D8;
     margin-bottom: 46px;
@@ -78,13 +83,16 @@ body{
     background: #6a6ff0;
 }
 .section2{
-    width: 1110px;
+    margin-top: 80px;
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.section2 img{
+    max-width: 1110px;
+    width: 100%;
     height: 570px;
-    margin-left:125px ;
-    margin-right:125px ;
-    margin-bottom:110px ;
-    margin-top: 120px;
-
 }
 
 
