--- a/styles/main.css
+++ b/styles/main.css
@@ -265,7 +265,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-left: 280px;
 }
 
 .section4 .p1 {
@@ -329,16 +328,19 @@ body {
 /*section4 ends...*/
 header {
   display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.header-container {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   max-width: 1109px;
   width: 100%;
   height: 23px;
-  margin-left: 50px;
-  margin-top: 61px;
-  margin-bottom: 96px;
-  padding-left: 70px;
 }
 
 .right-section {
@@ -379,19 +381,20 @@ a:hover {
 
 /*header part ends...*/
 footer {
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer-container {
   max-width: 1110px;
   width: 100%;
   height: 23px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 50px;
-  padding-left: 70px;
-  padding-right: 30px;
-  margin-right: 50px;
 }
 
-footer .right {
+.footer-container .right {
   display: flex;
   justify-content: space-between;
   align-items: center;
