--- a/styles/projects.css
+++ b/styles/projects.css
@@ -16,10 +16,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .section1 .p1 {
-  width: 475px;
+  max-width: 475px;
+  width: 100%;
   color: #111;
   font-size: 40px;
   font-style: normal;
@@ -27,9 +30,16 @@ body {
   line-height: 55px; /* 137.5% */
 }
 
-.left-section .p1, .p2, .p3 {
-  margin-right: 0px;
-  margin-left: 125px;
+.left-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 40px;
 }
 
 .left-section .p2, .p3 {
@@ -44,8 +54,6 @@ body {
 }
 
 .section1 .right-section {
-  margin-right: 125px;
-  margin-left: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -53,7 +61,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-left: 120px;
   max-width: 335px;
   width: 100%;
 }
@@ -105,10 +112,16 @@ body {
 .section2 .main-img {
   width: 1110px;
   height: 660px;
-  margin-left: 125px;
-  margin-right: 125px;
   margin-top: 61px;
   margin-bottom: 45px;
+}
+
+.section2 .img-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .section2 p {
@@ -120,13 +133,18 @@ body {
   font-weight: 400;
   line-height: 26px; /* 162.5% */
   opacity: 0.8;
-  margin-left: 125px;
   margin-bottom: 45px;
 }
 
+.section2 .paragraph {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 .section2 .gallary {
-  margin-left: 125px;
-  margin-right: 125px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
@@ -134,7 +152,7 @@ body {
   -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
   grid-gap: 30px;
-  margin-bottom: 132px;
+  margin-bottom: 100px;
 }
 
 .section2 .gallary > *:nth-child(1) {
@@ -152,7 +170,25 @@ body {
   -ms-grid-column: 5;
 }
 
+.gallary-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.header-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -169,10 +205,6 @@ header {
   max-width: 1109px;
   width: 100%;
   height: 23px;
-  margin-left: 126px;
-  margin-right: 125px;
-  margin-top: 61px;
-  margin-bottom: 96px;
 }
 
 .right-section {
@@ -196,12 +228,12 @@ header {
   color: #111;
 }
 
-.left-section .projects:hover {
+.left-section .projects a:hover {
   border-bottom: solid 1px;
   color: #111;
 }
 
-.left-section .contact:hover {
+a:hover {
   border-bottom: solid 1px;
   color: #111;
 }
@@ -213,6 +245,14 @@ header {
 
 /*header part ends...*/
 footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer-container {
   max-width: 1110px;
   width: 100%;
   height: 23px;
@@ -225,11 +265,9 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-left: 125px;
-  margin-right: 125px;
 }
 
-footer .right {
+.footer-container .right {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
